Pull request: client: fix statistics table layout
Squashed commit of the following:

commit 02834e6b7b42793e31fd01cadf0af6da875d556b
Author: Ildar Kamalov <ik@adguard.com>
Date:   Wed Sep 29 16:47:14 2021 +0300

    client: nowrap

commit b45162a0f20b035c36ceb75cbc2485fa49012628
Author: Ildar Kamalov <ik@adguard.com>
Date:   Wed Sep 29 16:28:05 2021 +0300

    fix: stats table layout

--- a/client/src/components/Dashboard/Dashboard.css
+++ b/client/src/components/Dashboard/Dashboard.css
@@ -49,3 +49,39 @@
         display: block;
     }
 }
+
+.counters__row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-top: 1px solid #dee2e6;
+    padding: 0.75rem 1.5rem;
+}
+
+.counters__column--value {
+    flex-shrink: 0;
+    margin-left: 1.5rem;
+    text-align: right;
+    white-space: nowrap;
+}
+
+@media screen and (min-width: 768px) {
+    .counters__column {
+        display: flex;
+        align-items: center;
+        overflow: hidden;
+    }
+
+    .counters__title {
+        display: block;
+        max-width: 100%;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
+
+    .counters__tooltip {
+        display: block;
+        flex-shrink: 0;
+    }
+}
